--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.4.2",
-      "mongodm": "https://github.com/ActiveUnits/mongodm/tarball/master",
-      "mongodb": "http://github.com/ActiveUnits/node-mongodb-native/tarball/master",
-      "flashsocket-js": "latest"
+      "flashsocket-js": "latest",
+      "soundsharing-broadcastserver-standardradioplugin-js": "https://github.com/robbflynn/soundsharing-broadcastserver-standardradioplugin-js/tarball/master"
   }
 }
