package name and plugins configuration fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sound-sharing-server"
+    "name": "soundsharing-broadcast-server"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
